k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microkafka-ingress
  namespace: microkafka
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public
  tls:
    - hosts:
        - microkafka.bezawada.link
      secretName: microkafka-tls
  rules:
    - host: microkafka.bezawada.link
      http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80

          # Payment
          - path: /payment-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80

          # Order
          - path: /order-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80

          # Email
          - path: /email-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 80

          # Analytics
          - path: /analytic-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: analytic-service
                port:
                  number: 80

          # Kafka UI
          - path: /kafka-ui(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 80
